src/styles/styles.scss
/* ... */
@media (min-width: 767px) {
	.navigation {
		margin-top: 60px;
		background-color: transparentize(#24262d, .3);
		width: 200px;
		position: fixed;
		left: -200px;
		bottom: 0;
		top: 0;
		transition: left 0.3s ease-out;
		-webkit-transition: left 0.3s ease-out;
	}

	.navigation nav {
		background-color: transparentize(#2a2d35, .3);
	}

	.navigation:before {
		transition: left 0.3s ease-out;
		-webkit-transition: left 0.3s ease-out;
		content: '';
		position: fixed;
		top: 0;
		bottom: 0;
		z-index: -1;
		left: -200px;
		background-color: #24262d;
		width: 200px;
	}

	body.nav-toggle .content {
		margin-left: 200px;
	}

	body.nav-toggle .navigation {
		left: 0px;
	}

	body.nav-toggle .navigation:before {
		left: 0px;
	}
}

@media (max-width: 767px) {
	body {

		.content {
			padding: 30px 10px 10px 10px;
		}

		.navigation {
			display: none;
		}

		&.nav-toggle {

			.navigation {
				display: block;
				z-index: 10;
				width: 100%;
				position: absolute;
				background-color: #24262d;

				.nav {
					padding: 15px 0px;
				}
				.nav-info {
					display: none;
				}
			}

		}
	}
}

body.blank .content {
    margin: 0;
}

.container-center {
    max-width: 400px;
    margin: 10% auto 0;
    padding: 20px;
}

.container-center.sm {
    max-width: 200px;
}

.container-center.md {
    max-width: 600px;
}

.container-center.lg {
    max-width: 800px;
}


/* Various */

a {
    color: #f6a821;
    text-decoration: none;
}

a:hover,
a:focus {
    color: #f8bb52;
    outline: none;
}

hr {
    margin-top: 20px;
    margin-bottom: 20px;
    border: 0;
    border-top: 1px solid #3d404c;
}

code {
    padding: 2px 4px;
    font-size: 90%;
    color: #f6a821;
    background-color: #24262d;
    border-radius: 3px;
}

pre {
    font-size: 90%;
    color: #949ba2;
    background-color: #24262d;
    border-radius: 3px;
    border: none;
}

mark {
    background-color: #e9e599;
    border-radius: 2px;
    padding: .1em .4em;
}

label {
    color: #ffffff;
    font-weight: 500;
}

sup {
    font-size: 12px;
    top: -0.8em;
}

.help-block {
    color: #6d757d;
}

.bs-example {
    background-color: #2f323b;
    padding: 10px;
    border-radius: 3px;
}

.show-grid [class^="col-"] {
    background-color: #2f323b !important;
    border: 1px solid #3d404c;
    padding-bottom: 10px;
    padding-top: 10px;
}

.slight {
    font-size: 11px;
    font-weight: 300;
}

.show-grid {
    margin: 10px 0 !important;
}

.row {
    margin-left: -10px;
    margin-right: -10px;
}

.col-xs-1,
.col-sm-1,
.col-md-1,
.col-lg-1,
.col-xs-2,
.col-sm-2,
.col-md-2,
.col-lg-2,
.col-xs-3,
.col-sm-3,
.col-md-3,
.col-lg-3,
.col-xs-4,
.col-sm-4,
.col-md-4,
.col-lg-4,
.col-xs-5,
.col-sm-5,
.col-md-5,
.col-lg-5,
.col-xs-6,
.col-sm-6,
.col-md-6,
.col-lg-6,
.col-xs-7,
.col-sm-7,
.col-md-7,
.col-lg-7,
.col-xs-8,
.col-sm-8,
.col-md-8,
.col-lg-8,
.col-xs-9,
.col-sm-9,
.col-md-9,
.col-lg-9,
.col-xs-10,
.col-sm-10,
.col-md-10,
.col-lg-10,
.col-xs-11,
.col-sm-11,
.col-md-11,
.col-lg-11,
.col-xs-12,
.col-sm-12,
.col-md-12,
.col-lg-12 {
    padding-left: 10px;
    padding-right: 10px;
}


/* Icons */

.font-example-box:hover {
    color: #ffffff;
}

.font-example-box {
    text-align: center;
    min-height: 90px;
    margin: 10px 0;
    font-size: 42px;
}

.font-example-box i {
    font-size: 22px;
}

.icon-example-name {
    display: block;
    font-size: 11px;
}

.back-link {
    float: left;
    width: 100%;
    margin: 10px;
}


/* Images */

img.image-xs {
    width: 16px;
    height: 16px;
}

img.image-md {
    width: 32px;
    height: 32px;
}

img.image-lg {
    width: 64px;
    height: 64px;
}

img.image-xl {
    width: 128px;
    height: 128px;
}


/* UI Sortable */

.ui-sortable .panel-body {
    cursor: move;
}

.ui-sortable-placeholder {
    border: 1px dashed #535868 !important;
    visibility: visible !important;
}

.navbar {
    min-height: 60px;
}

.navbar-default .navbar-brand,
.navbar-default .navbar-brand:focus {
    width: 200px;
    background-color: #f6a821;
    height: 60px;
    padding: 20px 25px;
    font-weight: 400;
    letter-spacing: 2px;
	color: #FFFFFF;
	text-align: center;
}

.navbar-default .navbar-brand {
    color: #FFFFFF;
}

.navbar-default .navbar-brand:hover {
    color: #FFFFFF;
    background-color: #f5a212;
}

.navbar-default {
    border-bottom: none;
    background-color: #FFFFFF;
    box-shadow: 0px 0px 21px #161616;
}

.left-nav-toggle {
    float: left;
    padding: 9px 25px 8px 25px;
}

.left-nav-toggle:hover a {
    color: #f6a821;
}

.left-nav-toggle a {
    font-size: 30px;
    color: #949ba2;
}

.navbar-default .navbar-nav>li>a {
    color: #6a727a;
}

.left-nav-toggle a:hover,
.left-nav-toggle a:focus {
    text-decoration: none;
}

.navbar-form {
    margin-top: 11px;
    padding: 0;
}

.navbar-form input.form-control {
    border: none;
    box-shadow: none;
    color: #949ba2;
}

.navbar-form input.form-control::-webkit-input-placeholder {
    color: #6f7780;
}

.navbar-form input.form-control:-moz-placeholder {
    color: #6f7780;
}

.navbar-form input.form-control::-moz-placeholder {
    color: #6f7780;
}

.navbar-form input.form-control:-ms-input-placeholder {
    color: #6f7780;
}

.navbar-nav>li>a {
    padding: 20px 15px;
    text-transform: uppercase;
    font-weight: 500;
}

.navbar-nav>li:first-child>a {
    padding-left: 0;
}

.navbar-nav.navbar-right a .label {
    margin: -5px 0 0 5px;
}

.navbar-default .navbar-nav>.active>a,
.navbar-default .navbar-nav>.active>a:focus,
.navbar-default .navbar-nav>.active>a:hover {
    background-color: transparent;
}

.profil-link {
    height: 60px;
}

li.profil-link>a {
    padding: 10px;
}

.profil-link img {
    height: 40px;
    margin-right: 10px;
}

.profil-link .profile-address {
    text-transform: none;
}

#mobile-menu {
    display: none;
}

@media (max-width: 767px) {
    #mobile-menu {
        display: block;
    }
}

.luna-nav.nav {
    padding-top: 15px;
}
/* ... */

